kubernetes/common/logging-ns.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    kubernetes.io/metadata.name: logging
