kubernetes/common/suricata-ns.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: suricata
  labels:
    kubernetes.io/metadata.name: suricata
